# Approvers

./: .gitignore  02.nnue  03.nnue  04.nnue  05.nnue  06.nnue  07.nnue  08.nnue  09.nnue  10.nnue  11.nnue  CMakeLists.txt  HL64-qa101-qb160-S2-T77novT79maraprmay.nnue  README.md  berserk-2.nnue  berserk-3.nnue  berserk.nnue  buckets.nnue  default-spsa.nnue  default.nnue  expr32.nnue  expr39-qa184-qb64-round.nnue  expr40-100epochs.nnue  expr41-40epochs.nnue  expr42-4000s-800wl.nnue  expt-07.nnue  expt-08-test77-78.nnue  expt-11.nnue  expt-13-baseline.nnue  expt-13-qb48.nnue  expt-14.nnue  expt-16-fn.nnue  expt-16.nnue  expt-17-finetune.nnue  expt-17-stage3.nnue  expt-17.nnue  expt-18.nnue  expt-27.nnue  expt-28.nnue  expt-29.nnue  (+44 more)
.github/workflows/: webhook.yml
scripts/: build.sh  main.py  params.py
src/: Makefile  avx2-bitboard.c  avx2-bitboard.h  benchmark.c  bitbase.c  bitboard.c  bitboard.h  bmi2-fancy.c  bmi2-fancy.h  bmi2-plain.c  bmi2-plain.h  config.h  endgame.c  endgame.h  evaluate.c  evaluate.h  magic-fancy.c  magic-fancy.h  magic-plain.c  magic-plain.h  main.c  material.c  material.h  misc.c  misc.h  movegen.c  movegen.h  movegen2.c  movepick.c  movepick.h  nnue.c  nnue.h  ntsearch.c  pawns.c  pawns.h  position.c  position.h  psqt.c  qsearch.c  search.c  (+14 more)
training/: config.rs
